--- a/views/vault.ejs
+++ b/views/vault.ejs
@@ -3,8 +3,17 @@
 <div class="jumbotron text-center">
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Entered YOUR Vault</h1>
-    <p class="secret-text">MDN password is: 8545@#743 </p>
+    <h1 class="display-3">You've Entered Vault</h1>
+
+    <%  usersWithVaults.forEach((user) => { %>
+    <p class="secret-text"> <%= user.vault %> </p>
+    <%});%>
+
+
+
+
+
+
     <hr>
 
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
